--- a/react-app/src/index.html
+++ b/react-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/openmoji-blossom.svg">
+    <link rel="icon" type="image/svg+xml" href="openmoji-blossom.svg">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
